--- a/src/components/survey/Survey.css
+++ b/src/components/survey/Survey.css
@@ -1,7 +1,7 @@
 .showing_section_survey {
     width: 100%;
-    height: 500px;
-    background-color: wheat;
+    height: 380px;
+    background-color: white;
 }
 .time-line {
 width: 50%;
@@ -15,23 +15,63 @@ position: relative;
     position: absolute;
     width: 100%;
     display: flex;
-
     justify-content: space-around;
-    top:-12px
+    top:-12px;
+  
 }
 .time-line-circle {
     border-radius: 50%;
     width: 25px;
-    background-color: whitesmoke;
+    background-color: #eff9f3;
     height: 25px;
+    border-color: #206695;
+    border-width: 10px;
+
 }
 .time-line-circle img {
- max-width: 25px;
- max-height: 25px;
+ max-width: 15px;
+ max-height: 15px;
+  align-items: center;
+
+
 }
 
-@media only screen and (min-width:50px) {
+@media only screen and (min-width:500px) {
     .showing_section_survey {
         background-color: red;
     }
 }
+
+
+.iconFirstPage{
+        height: 80%;
+      width: 80%;
+margin-left: auto;
+margin-right: auto;
+    margin-top: 20%;
+    margin-bottom: 50%;
+
+}
+
+
+
+.buttonMovingLeft{
+
+    margin-right: 250px;
+    margin-top: 20%;
+    margin-bottom: 50%;
+    margin-left: 0px;
+  align-items: center;
+
+}
+
+
+
+
+.textInto{
+
+font-family: 'Assistant', sans-serif;
+font-size: 20;
+}
+
+
