--- a/client/src/components/survey/Survey.css
+++ b/client/src/components/survey/Survey.css
@@ -56,7 +56,7 @@ margin-right: auto;
 
 
 
-.buttonMovingLeft{
+.endButton{
 
     margin-right: 250px;
     margin-top: 20%;
@@ -66,9 +66,23 @@ margin-right: auto;
 
 }
 
+.buttonMovingBack{
+
+    margin-left: 250px;
+}
+
+.buttonMovingForward{
+    margin-right: 250px;
+    margin-top: 20%;
+    margin-bottom: 0%;
+    margin-left: 0px;
+  align-items: center;
+
+
+}
 
 .question_container {
-    direction: rtl;
+direction: rtl;
 padding: 4px;
 }
 
