--- a/admin/src/assets/style/style.css
+++ b/admin/src/assets/style/style.css
@@ -1,23 +1,21 @@
 body {
     background-color: aliceblue;
-    
 }
 
 button {
-    background-color: #5465BD;
+    background-color: #046497;
     color: white;
+    font-weight: 700;
     display: block;
     margin: 2rem;
-    border-radius: 5%;
+    border-radius: 0.5rem;
     border: none;
-    height: 2rem;
-    width: 5rem;
+    padding: 0.5rem 1rem;
 }
 
 button:hover {
     cursor: pointer;
-    background-color: blue;
-
+    background-color: #68c2a0;
 }
 
 .logo-in-admin {
@@ -31,36 +29,49 @@ button:hover {
 
 .auth-title {
     margin: 2rem;
-    font-size: 3rem;
+    font-size: 2rem;
+    text-align: center;
 }
 
+label {
+    font-weight: 700;
+}
+
+.select-option{
+    border-radius: 0.5rem;
+}
 
 .btn-to-login {
     margin: 1rem;
 }
 
-.validate-btn {
-    text-align: center;
-    margin: 2rem auto;
-}
-
-.validate-btn:hover {
-    background-color: blue;
-}
-
 .input-result {
+    min-width: 37.5rem;
+    max-width: 50%;
+}
+
+.input-result-answer {
+    min-width: 25rem;
+    max-width: 50%;
+}
+
+.input-result-points {
+    width: 4rem;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+    opacity: 1;
+}
+
+input {
+    text-align: right;
     height: 2rem;
     margin: 1rem 1rem;
     padding: 0.5rem;
-    transition: width 6s ease-in-out;
-    border: 0.1px solid black;
-    border-radius: 2%;
+    transition: all 6s ease-in-out;
+    border: 0.1px solid rgb(209, 208, 208);
+    border-radius: 0.5rem;
 }
-
-.input-result:focus {
-    width: 50%;
-}
-
 
 #groups,
 #questions {
@@ -71,18 +82,35 @@ button:hover {
     margin: 1rem;
 }
 
-.underlined {
-    border-bottom: solid;
-    margin: 4rem;
+.select-question {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+
+.select{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.action{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .form-submit {
     margin: 2rem auto;
 }
 
+.form-data {
+    text-align: center;
+}
 
 .label-for-answers {
-    text-decoration: underline dotted;
+    /* text-decoration: underline dotted; */
     margin: 0.5em;
 }
 
