--- a/admin/src/assets/style/style.css
+++ b/admin/src/assets/style/style.css
@@ -117,3 +117,83 @@ input {
 .input-result-points {
     width: 2em;
 }
+
+
+nav{
+    display: flex;
+    flex-direction: column;
+    align-items: center ;
+    margin-top: 2rem;
+}
+
+
+.login{
+    display: flex;
+    flex-direction: column;
+    align-items: center ;
+    margin-top: 2rem;
+}
+
+.login>form{
+    display: flex;
+    flex-direction: column;
+    align-items: center ;
+    margin-top: 2rem;
+}
+
+.updates-header{
+    display: flex;
+    justify-content: space-between;
+    margin: 0.5rem 0.5rem 0 0.5rem;;
+    align-items: center;
+}
+
+.updates-header>button{
+height: 2.5rem;
+}
+
+.error{
+    padding: 1rem;
+    background-color: rgba(255, 0, 0, 0.292);
+    border-radius: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.error-img{
+    width: 2rem;
+}
+
+.message{
+    padding: 1rem;
+    background-color: rgba(0, 255, 60, 0.292);
+    border-radius: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+input[type="email"]::placeholder {
+                 
+    /* Firefox, Chrome, Opera */
+    text-align: left;
+}
+
+input[type="email"] {
+                 
+    /* Firefox, Chrome, Opera */
+    text-align: left;
+}
+
+input[type="password"]::placeholder {
+                 
+    /* Firefox, Chrome, Opera */
+    text-align: left;
+}
+
+input[type="password"] {
+                 
+    /* Firefox, Chrome, Opera */
+    text-align: left;
+}
